--- a/gb/21/11/9/n13363693.md
+++ b/gb/21/11/9/n13363693.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/reqcja3941/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南澳强制接种范围扩大 未接种者禁入养老院</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年11月09日讯】（大纪元记者马驰澳洲阿德莱德编译报导）<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>当局称，为保护边境开放后的体弱人群，再次增加了强制要求注射疫苗的行业。并且，如果没有<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E8%80%81%E5%B9%B4%E6%8A%A4%E7%90%86.md#1">老年护理</a>机构的访客。</p>
-<p>据《广告人报》（The Advertiser）报导，11月9日周二，<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>政府公布了更为严格的疫苗接种新规定。一方面，脊椎按摩医师和整骨医师已被列入了需要接种疫苗的医护职业清单；另一方面，从12月起，没有打过两剂疫苗的人将不被允许进入<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E9%99%A2.md#1">养老院</a>与<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E8%80%81%E5%B9%B4%E6%8A%A4%E7%90%86.md#1">老年护理</a>机构。</p>
+<p>【大纪元2021年11月09日讯】（大纪元记者马驰澳洲阿德莱德编译报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>当局称，为保护边境开放后的体弱人群，再次增加了强制要求注射疫苗的行业。并且，如果没有<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%80%81%E5%B9%B4%E6%8A%A4%E7%90%86.md#1">老年护理</a>机构的访客。</p>
+<p>据《广告人报》（The Advertiser）报导，11月9日周二，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>政府公布了更为严格的疫苗接种新规定。一方面，脊椎按摩医师和整骨医师已被列入了需要接种疫苗的医护职业清单；另一方面，从12月起，没有打过两剂疫苗的人将不被允许进入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E9%99%A2.md#1">养老院</a>与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%80%81%E5%B9%B4%E6%8A%A4%E7%90%86.md#1">老年护理</a>机构。</p>
 <p>根据南澳警方最新的紧急管理规定，从事接触人的医疗护理和专业从业人员，包括脊椎按摩医师和整骨医师，都必须在12月6日之前注射一剂由澳洲治疗用品管理局（TGA）批准的疫苗，并持有第二剂疫苗注射预约的证明。其中还包括相关工作场所的诊所前台接待人员、护理人员以及其他工作人员，如供应商和送货司机等。</p>
-<p>家庭<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E6%8A%A4%E7%90%86.md#1">残疾护理</a>和老年护理的工作人员也需要在11月底之前接种至少一剂疫苗。只有具有有效医疗豁免或合法理由的人才能在未注射疫苗的情况下继续工作。</p>
-<p>此外，从12月6日起，任何未完全接种疫苗的人都被禁止进入<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E9%99%A2.md#1">养老院</a>，除非访客获得医疗豁免或访客未满12岁。</p>
+<p>家庭<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E6%8A%A4%E7%90%86.md#1">残疾护理</a>和老年护理的工作人员也需要在11月底之前接种至少一剂疫苗。只有具有有效医疗豁免或合法理由的人才能在未注射疫苗的情况下继续工作。</p>
+<p>此外，从12月6日起，任何未完全接种疫苗的人都被禁止进入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E9%99%A2.md#1">养老院</a>，除非访客获得医疗豁免或访客未满12岁。</p>
 <p>从11月8日开始，其它几个卫生部门的员工也被要求至少接种一剂疫苗，例如药房、社区医疗机构、专科门诊机构、私人病理和放射机构、国防卫生机构、原住民社区卫生服务机构，以及卫生部门提供服务的任何地点。</p>
 <p>专科门诊机构的从业者也包括在内，包括提供面对面服务的任何环境，比如艺术或音乐治疗、运动生理学、职业治疗、验光、营养与饮食学、物理治疗、心理学和社工等。</p>
 <p>南澳卫生厅长韦德（Stephen Wade）表示，因为南澳边境会很快开放，所以必须保护那些最脆弱的人，而现在就是提供高水平保护的最佳时机。他说，最容易感染病毒的人是合并症患者，而居住在养老院的许多老人都有合并症。</p>
@@ -22,47 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/10/18/n13311178.md#1">南澳启动首个数字疫苗护照试点</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/10/19/n13314165.md#1">边界重开在即 南澳公布防疫计划</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/10/26/n13330012.md#1">南澳11月23日起向完全接种疫苗者开放 ?</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/10/26/n13330054.md#1">南澳公布解封蓝图 预计节前可“恢复正常”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/10/30/n13341731.md#1">南澳一议员公开反对隐性强制接种疫苗</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/11/2/n13347042.md#1">南澳预测模型：解封后多少人会染疫丧生？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/11/2/n13347057.md#1">南澳医院数百员工因未打疫苗而被“休假”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/21/11/3/n13349106.md#1">澳疫苗专家拒绝重新接种疫苗 或面临解雇</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/27/n13608433.md#1">南澳放宽餐饮场所和婚礼限制 重审隔离规定</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/27/n13607860.md#1">南澳银行揭示影响消费者和企业信心因素</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/18/n13311178.md#1">南澳启动首个数字疫苗护照试点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/19/n13314165.md#1">边界重开在即 南澳公布防疫计划</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/26/n13330012.md#1">南澳11月23日起向完全接种疫苗者开放 ?</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/26/n13330054.md#1">南澳公布解封蓝图 预计节前可“恢复正常”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341731.md#1">南澳一议员公开反对隐性强制接种疫苗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/2/n13347042.md#1">南澳预测模型：解封后多少人会染疫丧生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/2/n13347057.md#1">南澳医院数百员工因未打疫苗而被“休假”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349106.md#1">澳疫苗专家拒绝重新接种疫苗 或面临解雇</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680514.md#1">阿市高中成为南澳第四所因疫情关闭的学校</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680369.md#1">南澳新内阁亮相 独立议员意外入选</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/1/n10607931.md#1" target="_blank">林辉：中共红军“三大纪律”掩盖下的恶行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605976.md#1">【秦鹏直播】铁链女一声惊人 说明不是小花梅</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/15/n12812584.md#1">罗马时代迫害基督徒 今生仍在偿还业债</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/23/n12829555.md#1">中共病毒（新冠病毒）的变异现灵性</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/11/n12804755.md#1">“后庭花”为什么是亡国之音的代称？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12837707.md#1">【传奇大观】天仙失言落凡尘 恋久生情再沉沦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/30/n12844511.md#1">【探索时分】台湾F16V升级 台海新战机来袭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844409.md#1">【横河直播】世卫报告替中共甩锅 利益冲突遭疑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844230.md#1">【时事纵横】小粉红抵制完败？中捷牵线人坠机亡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/22/n12826574.md#1">不想花钱换手机？五招改善你的手机速度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/27/n12839676.md#1">【名家专栏】攻击美国 中共欲重新定义人权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841466.md#1">抵制声浪下 耐克、阿迪达斯产品仍遭哄抢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841758.md#1">“战狼”吴京用iPhone发文 遭网民嘲讽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841453.md#1">香港金牌绿叶廖启智罹癌离世 享年66岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844152.md#1">三个月6位港星离世 廖启智抗癌细节曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840451.md#1">宋柏纬胞姊现身餐车 黄秋生夸气质：全台最美</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840534.md#1">韩国名编剧金银淑新戏开播 男主角撞脸孔刘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840638.md#1">台湾福卫五号拍到 苏伊士运河“大排长荣”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840882.md#1">美国男子离职 老板竟以9万多个硬币付薪水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12838700.md#1">减肥身体亮红灯 营养师：我正常吃三餐 瘦到48公斤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840728.md#1">泰贫女在海螺发现珍珠 罹癌母亲医药费有望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12842315.md#1">泰国小偷行窃时竟然睡着 被警察叫醒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/9/n13363693.htm">南澳强制接种范围扩大 未接种者禁入养老院</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/9/n13363693.htm">南澳强制接种范围扩大 未接种者禁入养老院</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/reqcja3941/djy/blob/master/gb/21/11/9/n13363693.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/11/9/n13363693.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
